--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Shyam K Sateesh"
   pronouns         : "He/Him"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  location         : ""
   employer         : "Red Brick University"
   uri              : # URL
   email            : "shyamksateesh@gmail.com" 
