--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Shyam K Sateesh"
-  pronouns         : "He/Him"  
+  pronouns         : "he/him/his"  
   bio              : "Short biography for the left-hand sidebar"
   location         : ""
   employer         : "Red Brick University"
