--- a/_config.yml
+++ b/_config.yml
@@ -25,19 +25,19 @@ author:
   avatar           : "profile.png"
   name             : "Shyam K Sateesh"
   pronouns         : "he/him/his"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "CSE Senior, with a keen interest towards AI/ML"
   location         : "Bengaluru, IN"
-  employer         : "Red Brick University"
+  employer         : "PES University"
   uri              : # URL
   email            : "shyamksateesh@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=2yxe-NgAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # URL
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : # URL
   researchgate     : # URL
   scopus           : # URL
 
