--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
   email            : "shyamksateesh@gmail.com" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
+  arxiv            : "https://arxiv.org/search/cs?searchtype=author&query=Sateesh,+S+K"
   googlescholar    : "https://scholar.google.com/citations?user=2yxe-NgAAAAJ&hl=en"
   impactstory      : # URL
   orcid            : # URL
