--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Shyam K Sateesh"
-  pronouns         : "he/him/his"  
+  pronouns         : "He/Him/His"  
   bio              : "CSE Senior, with an interest towards AI/ML"
   location         : "Bengaluru, IN"
   employer         : "PES University"
