--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "homepage-dark"
+site_theme               : "default"
 title                    : "Shyam Krishna"
 title_separator          : "-"
-name                     : &name "Shyam"
+name                     : &name "Shyam Krishna"
 description              : &description "personal description"
-url                      : https://shyamksateesh.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://shyamksateesh.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
